# tesiMaterial

./: Dockerfile  config.json  info  train_hello_world_model
NewWorld/hello_world/: CMakeLists23.txt  prj.conf
NewWorld/hello_world/src/: main_functions.cpp  model.hpp
NewWorld/hello_world/train/: train_hello_world_model.ipynb
docker64/: Dockerfile
dockerCont/: Dockerfile  training.ipynb
hello_world/: CMakeLists.txt
hello_world/src/: constants.c  main.c  main_functions.cpp
hello_world/train/: train_hello_world_model.ipynb
